--- a/Assets/css/style.css
+++ b/Assets/css/style.css
@@ -48,6 +48,7 @@ header > * {
 }
 
 .proj-container {
+    width:49%;
     max-height:25em;
     transition: all 0.3s ease-in-out;
     overflow:hidden;
