Added dropdown with github repos, fixed container and text size on projects cards for smaller screen sizes

--- a/Assets/css/style.css
+++ b/Assets/css/style.css
@@ -111,9 +111,33 @@ header > * {
     }
 }
 
+.textlinks { 
+    display: flex;
+    position:absolute;
+    font-size:14px;
+    font-weight:bold;
+    background-color: var(--lblue);
+    color:var(--dgray);
+    height: 1.5em;
+    margin-top:.5em;
+    align-items: center;
+    }
+
 @media screen and (min-width: 768px) {
     .border-egg {
         border-right: 3px;
         border-style: solid;
     }
+
+    .textlinks { 
+        display: flex;
+        position:absolute;
+        font-size:20px;
+        font-weight:bold;
+        background-color: var(--lblue);
+        color:var(--dgray);
+        height: 2em;
+        margin-top:.5em;
+        align-items: center;
+        }
 }
