--- a/Assets/css/style.css
+++ b/Assets/css/style.css
@@ -28,11 +28,6 @@ header > * {
     font-size:135%;
 }
 
-.contact-link {
-    color:var(--eggshell);
-    font-size:135%;
-}
-
 /* Images */
 .lg-proj-container {
     max-height:25em;
@@ -69,18 +64,6 @@ header > * {
     object-fit: cover;
 }
 
-/* Link styling */
-.textlinks { 
-    display: flex;
-    position:absolute;
-    font-size:20px;
-    font-weight:bold;
-    background-color: var(--lblue);
-    color:var(--dgray);
-    height: 2em;
-    margin-top:.5em;
-    }
-
 /* Colors */
 
 .dark-back {
@@ -108,9 +91,10 @@ header > * {
     }
     .border-egg {
         border-style: none;
+    
+        
     }
-}
-
+    /* Link styling */
 .textlinks { 
     display: flex;
     position:absolute;
@@ -123,12 +107,23 @@ header > * {
     align-items: center;
     }
 
+.contact-link {
+    color:var(--eggshell);
+    font-size:100%;
+    text-align: center;
+    }
+}
+
+#container-contact {
+    text-align: center;
+}
+
 @media screen and (min-width: 768px) {
     .border-egg {
         border-right: 3px;
         border-style: solid;
     }
-
+/* Link styling */
     .textlinks { 
         display: flex;
         position:absolute;
@@ -140,4 +135,8 @@ header > * {
         margin-top:.5em;
         align-items: center;
         }
+    .contact-link {
+        color:var(--eggshell);
+        font-size:135%;
+    } 
 }
