Added pig e bank project

--- a/Assets/css/style.css
+++ b/Assets/css/style.css
@@ -64,6 +64,10 @@ header > * {
     object-fit: cover;
 }
 
+/* #pig-container {
+    object-fit:scale-down;
+} */
+
 /* Link styling */
 .textlinks { 
     display: flex;
